# qusezhao

./: .gitattributes  .gitignore  README.md  pyproject.toml  启动图形界面.bat  启动自动GitHub同步监听.bat  自动同步到GitHub.bat
docs/: 00_项目总览.md  01_需求规格说明书.md  02_技术方案.md  03_详细实施计划书.md  04_测试计划.md  05_公开样例与行业参数研究.md  06_AI模型训练计划.md  07_项目进度记录.md  08_AI_color_restoration_20260605.md
release_assets/: README.md  summary.json
release_assets/dataset/: manifest.csv  test_manifest.csv  train_manifest.csv
release_assets/experiments/latest/: legend.md  metrics.json  run_config.json  sources.md
release_assets/models/: film_mask_tiny_mixed_true_negative.pt
src/film_mask_automation/: __init__.py  cli.py  processor.py  profile.py  smart.py
src/film_mask_automation/gui/: __init__.py  app.py  main_window.py
src/film_mask_automation/ml/: __init__.py  data.py  inference.py  model.py  train.py
tests/: test_dataset_tools.py  test_gui_modes.py  test_ml_inference.py  test_processor.py
tools/: build_mixed_true_negative_dataset.py  build_release_assets.py  build_training_manifest.py  build_true_negative_manifests.py  create_experiment_run.py  create_review_package.py  create_true_negative_review_package.py  download_blueneg_subset.py  download_public_samples.py  evaluate_pair.py  expand_blueneg_raw_rendered.py  git_sync.ps1  git_watch_sync.ps1  make_sample.py  orient_blueneg_rendered.py  render_blueneg_raw_negatives.py
