[project]
name = "film-mask-automation"
version = "0.1.0"
description = "Desktop-oriented automation toolkit for removing color negative film orange masks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ml = [
  "torch>=2.3",
  "torchvision>=0.18",
  "huggingface_hub>=0.24",
  "rawpy>=0.21",
]

[project.scripts]
film-mask-auto = "film_mask_automation.cli:main"
film-mask-gui = "film_mask_automation.gui.app:main"
film-mask-train = "film_mask_automation.ml.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
